Fix typo on typo fix :(

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>ol3 is still under heavy development, with many features missing. But the development team wants to give early adopters a sneak preview by releasing an early alpha.</p>
     <ul>
       <li>Browse the <a href="en/master/examples/">examples</a>, and see how to create a <a href="en/master/examples/simple.html">simple</a> map.</li>
-      <li>Explore the <a href="en/master/apidoc">API documentaion</a>. This is in an early stage. It shows the API already, but events are not yet documented, and introductory prose documentation needs to be added to classes and factories.</li>
+      <li>Explore the <a href="en/master/apidoc">API documentation</a>. This is in an early stage. It shows the API already, but events are not yet documented, and introductory prose documentation needs to be added to classes and factories.</li>
       <li>Start creating your own maps by simply including ol3 css and JavaScript in your web page:
         <pre>&lt;link rel="stylesheet" href="http://openlayers.github.io/en/master/build/ol.css" type="text/css"&gt;
 &lt;script src="http://openlayers.github.io/en/master/build/ol.js"&gt;&lt;/script&gt;</pre>
