Updating roadmap url

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </ul>
     <h2>More Information on OpenLayers 3</h2>
     <ul>
-      <li>See the <a href="https://github.com/openlayers/ol3/wiki/Development-Phase-1">roadmap</a> for features and goals for the ongoing first development phase of ol3.</li>
+      <li>See the <a href="https://gist.github.com/bquartier/396db7918969f460a0d5">roadmap</a> for features and goals for the ongoing first development phase of ol3.</li>
       <li>Join the <a href="https://groups.google.com/forum/#!forum/ol3-dev">ol3-dev mailing list</a> to follow development related discussions.</li>
     </ul>
   </div>
