Changes for the r3.0.0-alpha.1 release

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!-- FIXME replace master with r3.0.0-alpha.1 for the alpha release -->
 <head>
   <title>OpenLayers 3</title>
-  <link rel="stylesheet" href="en/master/resources/bootstrap/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="en/master/resources/layout.css" type="text/css">
-  <link rel="stylesheet" href="en/master/resources/bootstrap/css/bootstrap-responsive.min.css" type="text/css">
+  <link rel="stylesheet" href="en/r3.0.0-alpha.1/resources/bootstrap/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="en/r3.0.0-alpha.1/resources/layout.css" type="text/css">
+  <link rel="stylesheet" href="en/r3.0.0-alpha.1/resources/bootstrap/css/bootstrap-responsive.min.css" type="text/css">
 </head>
 <body>
 
@@ -29,11 +28,11 @@
     <h2>Getting Started with OpenLayers 3 alpha 1</h2>
     <p>ol3 is still under heavy development, with many features missing. But the development team wants to give early adopters a sneak preview by releasing an early alpha.</p>
     <ul>
-      <li>Browse the <a href="en/master/examples/">examples</a>, and see how to create a <a href="en/master/examples/simple.html">simple</a> map.</li>
-      <li>Explore the <a href="en/master/apidoc">API documentation</a>. This is in an early stage. It shows the API already, but events are not yet documented, and introductory prose documentation needs to be added to classes and factories.</li>
+      <li>Browse the <a href="en/r3.0.0-alpha.1/examples/">examples</a>, and see how to create a <a href="en/r3.0.0-alpha.1/examples/simple.html">simple</a> map.</li>
+      <li>Explore the <a href="en/r3.0.0-alpha.1/apidoc">API documentation</a>. This is in an early stage. It shows the API already, but events are not yet documented, and introductory prose documentation needs to be added to classes and factories.</li>
       <li>Start creating your own maps by simply including ol3 css and JavaScript in your web page:
-        <pre>&lt;link rel="stylesheet" href="http://openlayers.github.io/en/master/build/ol.css" type="text/css"&gt;
-&lt;script src="http://openlayers.github.io/en/master/build/ol.js"&gt;&lt;/script&gt;</pre>
+        <pre>&lt;link rel="stylesheet" href="http://ol3js.org/en/r3.0.0-alpha.1/build/ol.css" type="text/css"&gt;
+&lt;script src="http://ol3js.org/en/r3.0.0-alpha.1/build/ol.js"&gt;&lt;/script&gt;</pre>
       </li>
       <li>Consider <a href="https://github.com/openlayers/ol3/blob/master/CONTRIBUTING.md">contributing</a> to ol3.</li>
     </ul>
@@ -44,5 +43,5 @@
     </ul>
   </div>
   </div>
-  <script src="en/master/resources/social-links.js" type="text/javascript"></script>
+  <script src="en/r3.0.0-alpha.1/resources/social-links.js" type="text/javascript"></script>
 </body>
