Dabbling with plus

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="en/master/resources/bootstrap/css/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="en/master/resources/layout.css" type="text/css">
   <link rel="stylesheet" href="en/master/resources/bootstrap/css/bootstrap-responsive.min.css" type="text/css">
+  <link rel="publisher" href="https://plus.google.com/109410345277990031502">
 </head>
 <body>
 
