--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         height: 10px;
       }
       #tagline {
-        padding-left: 25%;        
+        padding-left: 25%;
+        margin-bottom: 10px;
       }
       #tagline p {
-        font-size: 210%;
+        font-size: 200%;
         font-style: italic;
       }
       #news {
         clear: both;
-        border: 1px solid #ddd;
-        background-color: #f3f3f3;
+        border: 1px solid #eee;
+        background-color: #f8f8f8;
         border-radius: 2px;
         padding: 10px;
         margin: 0 15px;
@@ -63,7 +64,6 @@
     </div>
     <div id='map'></div>
     <div class='container'>
-      <br>
       <blockquote id='tagline' class='pull-right plain'>
         <p>A high-performance, feature-packed library for all your mapping needs.</p>
       </blockquote>
