--- a/en/master/apidoc/ol.Feature.html
+++ b/en/master/apidoc/ol.Feature.html
@@ -65,9 +65,12 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
     <div class="description">
         <p>Create a new feature. A feature is the base entity for vectors and has
 attributes, including normally a geometry attribute.</p>
+
 <p>Example:</p>
+
 <pre><code>var feature = new ol.Feature({'foo': 'bar'});
-feature.setGeometry(new ol.geom.Point([100, 500]));</code></pre>
+feature.setGeometry(new ol.geom.Point([100, 500]));
+</code></pre>
     </div>
     
 
