--- a/en/master/apidoc/ol.Overlay.html
+++ b/en/master/apidoc/ol.Overlay.html
@@ -64,12 +64,15 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
     
     <div class="description">
         <p>An element to show on top of the map, such as for a popup.</p>
+
 <p>Example:</p>
+
 <pre><code>var popup = new ol.Overlay({
   map: map,
   element: document.getElementById('popup')
 });
-popup.setPosition(coordinate);</code></pre>
+popup.setPosition(coordinate);
+</code></pre>
     </div>
     
 
