--- a/en/master/apidoc/ol.control.Logo.html
+++ b/en/master/apidoc/ol.control.Logo.html
@@ -379,7 +379,7 @@ be styled by using a css selector for .ol-logo.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#bindTo">ol.Object#bindTo</a>
+		<a href="ol.control.Control.html#bindTo">ol.control.Control#bindTo</a>
 	</li></dd>
 	
 	
@@ -495,7 +495,7 @@ be styled by using a css selector for .ol-logo.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#get">ol.Object#get</a>
+		<a href="ol.control.Control.html#get">ol.control.Control#get</a>
 	</li></dd>
 	
 	
@@ -725,7 +725,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#notify">ol.Object#notify</a>
+		<a href="ol.control.Control.html#notify">ol.control.Control#notify</a>
 	</li></dd>
 	
 	
@@ -913,7 +913,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#on">ol.Object#on</a>
+		<a href="ol.control.Control.html#on">ol.control.Control#on</a>
 	</li></dd>
 	
 	
@@ -1123,7 +1123,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#once">ol.Object#once</a>
+		<a href="ol.control.Control.html#once">ol.control.Control#once</a>
 	</li></dd>
 	
 	
@@ -1284,7 +1284,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#set">ol.Object#set</a>
+		<a href="ol.control.Control.html#set">ol.control.Control#set</a>
 	</li></dd>
 	
 	
@@ -1518,7 +1518,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#setValues">ol.Object#setValues</a>
+		<a href="ol.control.Control.html#setValues">ol.control.Control#setValues</a>
 	</li></dd>
 	
 	
@@ -1706,7 +1706,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#un">ol.Object#un</a>
+		<a href="ol.control.Control.html#un">ol.control.Control#un</a>
 	</li></dd>
 	
 	
@@ -1823,7 +1823,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unbind">ol.Object#unbind</a>
+		<a href="ol.control.Control.html#unbind">ol.control.Control#unbind</a>
 	</li></dd>
 	
 	
@@ -1891,7 +1891,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unbindAll">ol.Object#unbindAll</a>
+		<a href="ol.control.Control.html#unbindAll">ol.control.Control#unbindAll</a>
 	</li></dd>
 	
 	
@@ -2018,7 +2018,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unByKey">ol.Object#unByKey</a>
+		<a href="ol.control.Control.html#unByKey">ol.control.Control#unByKey</a>
 	</li></dd>
 	
 	
