--- a/en/master/apidoc/ol.control.ZoomSlider.html
+++ b/en/master/apidoc/ol.control.ZoomSlider.html
@@ -64,10 +64,13 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
     
     <div class="description">
         <p>A slider type of control for zooming.</p>
+
 <p>Example:</p>
+
 <pre><code>var zoomslider = new ol.control.ZoomSlider({
   map: map
-});</code></pre>
+});
+</code></pre>
     </div>
     
 
@@ -380,7 +383,7 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#bindTo">ol.Object#bindTo</a>
+		<a href="ol.control.Control.html#bindTo">ol.control.Control#bindTo</a>
 	</li></dd>
 	
 	
@@ -496,7 +499,7 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#get">ol.Object#get</a>
+		<a href="ol.control.Control.html#get">ol.control.Control#get</a>
 	</li></dd>
 	
 	
@@ -844,7 +847,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#notify">ol.Object#notify</a>
+		<a href="ol.control.Control.html#notify">ol.control.Control#notify</a>
 	</li></dd>
 	
 	
@@ -1032,7 +1035,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#on">ol.Object#on</a>
+		<a href="ol.control.Control.html#on">ol.control.Control#on</a>
 	</li></dd>
 	
 	
@@ -1242,7 +1245,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#once">ol.Object#once</a>
+		<a href="ol.control.Control.html#once">ol.control.Control#once</a>
 	</li></dd>
 	
 	
@@ -1403,7 +1406,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#set">ol.Object#set</a>
+		<a href="ol.control.Control.html#set">ol.control.Control#set</a>
 	</li></dd>
 	
 	
@@ -1637,7 +1640,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#setValues">ol.Object#setValues</a>
+		<a href="ol.control.Control.html#setValues">ol.control.Control#setValues</a>
 	</li></dd>
 	
 	
@@ -1825,7 +1828,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#un">ol.Object#un</a>
+		<a href="ol.control.Control.html#un">ol.control.Control#un</a>
 	</li></dd>
 	
 	
@@ -1942,7 +1945,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unbind">ol.Object#unbind</a>
+		<a href="ol.control.Control.html#unbind">ol.control.Control#unbind</a>
 	</li></dd>
 	
 	
@@ -2010,7 +2013,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unbindAll">ol.Object#unbindAll</a>
+		<a href="ol.control.Control.html#unbindAll">ol.control.Control#unbindAll</a>
 	</li></dd>
 	
 	
@@ -2137,7 +2140,7 @@ the map here.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unByKey">ol.Object#unByKey</a>
+		<a href="ol.control.Control.html#unByKey">ol.control.Control#unByKey</a>
 	</li></dd>
 	
 	
