--- a/en/master/apidoc/ol.dom.Input.html
+++ b/en/master/apidoc/ol.dom.Input.html
@@ -62,10 +62,13 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
     
     <div class="description">
         <p>Helper class for binding HTML input to an ol.Object</p>
+
 <p>Example:</p>
+
 <pre><code>// bind a checkbox with id 'visible' to a layer's visibility
 var visible = new ol.dom.Input(document.getElementById('visible'));
-visible.bindTo('checked', layer, 'visible');</code></pre>
+visible.bindTo('checked', layer, 'visible');
+</code></pre>
     </div>
     
 
