--- a/en/master/apidoc/ol.layer.TileLayer.html
+++ b/en/master/apidoc/ol.layer.TileLayer.html
@@ -362,7 +362,7 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#bindTo">ol.Object#bindTo</a>
+		<a href="ol.layer.Layer.html#bindTo">ol.layer.Layer#bindTo</a>
 	</li></dd>
 	
 	
@@ -478,7 +478,7 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#get">ol.Object#get</a>
+		<a href="ol.layer.Layer.html#get">ol.layer.Layer#get</a>
 	</li></dd>
 	
 	
@@ -1301,7 +1301,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#notify">ol.Object#notify</a>
+		<a href="ol.layer.Layer.html#notify">ol.layer.Layer#notify</a>
 	</li></dd>
 	
 	
@@ -1489,7 +1489,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#on">ol.Object#on</a>
+		<a href="ol.layer.Layer.html#on">ol.layer.Layer#on</a>
 	</li></dd>
 	
 	
@@ -1699,7 +1699,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#once">ol.Object#once</a>
+		<a href="ol.layer.Layer.html#once">ol.layer.Layer#once</a>
 	</li></dd>
 	
 	
@@ -1860,7 +1860,7 @@ that it is bound to.</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#set">ol.Object#set</a>
+		<a href="ol.layer.Layer.html#set">ol.layer.Layer#set</a>
 	</li></dd>
 	
 	
@@ -1911,14 +1911,18 @@ that it is bound to.</p>
 black.  A value of 0 will leave the brightness unchanged.  A value of 1 will
 render the layer completely white.  Other values are linear multipliers on
 the effect (values are clamped between -1 and 1).</p>
+
 <p>The filter effects draft [1] says the brightness function is supposed to
 render 0 black, 1 unchanged, and all other values as a linear multiplier.</p>
+
 <p>The current WebKit implementation clamps values between -1 (black) and 1
 (white) [2].  There is a bug open to change the filter effect spec [3].</p>
+
 <p>TODO: revisit this if the spec is still unmodified before we release</p>
-<p>[1] <a href="https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html">https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
-[2] <a href="https://github.com/WebKit/webkit/commit/8f4765e569">https://github.com/WebKit/webkit/commit/8f4765e569</a>
-[3] <a href="https://www.w3.org/Bugs/Public/show_bug.cgi?id=15647">https://www.w3.org/Bugs/Public/show_bug.cgi?id=15647</a></p>
+
+<p>[1] <a href='https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html'>https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
+[2] <a href='https://github.com/WebKit/webkit/commit/8f4765e569'>https://github.com/WebKit/webkit/commit/8f4765e569</a>
+[3] <a href='https://www.w3.org/Bugs/Public/show_bug.cgi?id=15647'>https://www.w3.org/Bugs/Public/show_bug.cgi?id=15647</a></p>
     </div>
     
 
@@ -2676,7 +2680,7 @@ permitted).</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#setValues">ol.Object#setValues</a>
+		<a href="ol.layer.Layer.html#setValues">ol.layer.Layer#setValues</a>
 	</li></dd>
 	
 	
@@ -2976,7 +2980,7 @@ permitted).</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#un">ol.Object#un</a>
+		<a href="ol.layer.Layer.html#un">ol.layer.Layer#un</a>
 	</li></dd>
 	
 	
@@ -3093,7 +3097,7 @@ permitted).</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unbind">ol.Object#unbind</a>
+		<a href="ol.layer.Layer.html#unbind">ol.layer.Layer#unbind</a>
 	</li></dd>
 	
 	
@@ -3161,7 +3165,7 @@ permitted).</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unbindAll">ol.Object#unbindAll</a>
+		<a href="ol.layer.Layer.html#unbindAll">ol.layer.Layer#unbindAll</a>
 	</li></dd>
 	
 	
@@ -3288,7 +3292,7 @@ permitted).</p>
 	
 	<dt class="inherited-from">Inherited From:</dt>
 	<dd class="inherited-from"><ul class="dummy"><li>
-		<a href="ol.Object.html#unByKey">ol.Object#unByKey</a>
+		<a href="ol.layer.Layer.html#unByKey">ol.layer.Layer#unByKey</a>
 	</li></dd>
 	
 	
