--- a/en/master/apidoc/ol.layer.VectorLayer2.html
+++ b/en/master/apidoc/ol.layer.VectorLayer2.html
@@ -262,7 +262,7 @@ allowtransparency="true" frameborder="0" scrolling="0" height="20" width="90"></
 	</dt>
 	<dd>
 		
-<span class="param-type">ol.source.Source</span>
+<span class="param-type"><a href="ol.source.Source.html">ol.source.Source</a></span>
 
 
 	</dd>
