--- a/en/master/apidoc/index.html
+++ b/en/master/apidoc/index.html
@@ -57,10 +57,10 @@
 Coordinates within OpenLayers can be used in various projections where some common projections are always supported,
 others can be used via <a href="http://trac.osgeo.org/proj4js/">Proj4js</a>.</p>
 <h2>Maps and Layers</h2>
-<p>A map in OpenLayers is essentially a staple of layers that is viewed from the top. Layers are responsible for retieving data and displaying it.</p>
+<p>A map in OpenLayers is essentially a staple of layers that is viewed from the top. Layers are responsible for retrieving data and displaying it.</p>
 <h2>Contributing</h2>
 <p>See <a href="https://github.com/openlayers/ol3/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a> for instructions
-on building and testing OpenLayers. The file does also describes how to commit your changes to OpenLayers.</p></article>
+on building and testing OpenLayers. The file does also describe how to commit your changes to OpenLayers.</p></article>
     </section>
 
 
