--- a/index.html
+++ b/index.html
@@ -12,25 +12,28 @@
     
   </head>
   <body>
-    <div class='navbar navbar-fixed-top'>
+    <header class='navbar navbar-fixed-top'>
       <div class='container'>
-        <a href='/' class='navbar-brand'><img src='assets/theme/img/logo.png'>&nbsp;OpenLayers 3</a>
+
         <!-- button that shows up below 768px width -->
         <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-responsive-collapse'>
           <span class='icon-bar'></span>
           <span class='icon-bar'></span>
           <span class='icon-bar'></span>
         </button>
+
+        <a href='/' class='navbar-brand'><img src='assets/theme/img/logo.png'>&nbsp;OpenLayers 3</a>
+
         <!-- menu items that get hidden below 768px width -->
-        <div class='nav-collapse collapse navbar-responsive-collapse'>
+        <nav class='collapse navbar-collapse navbar-responsive-collapse'>
           <ul class='nav navbar-nav pull-right'>
             <li><a href='/en/master/doc'>Docs</a></li>
             <li><a href='/en/master/examples'>Examples</a></li>
             <li><a href='https://github.com/openlayers/ol3'>Code</a></li>
           </ul>
-        </div>
+        </nav>
       </div>
-    </div>
+    </header>
     
 
 <div id='map'></div>
