--- a/en/master/examples/select-features.html
+++ b/en/master/examples/select-features.html
@@ -33,7 +33,7 @@
 
         <div class="span12">
           <h4 id="title">Select features example</h4>
-          <p id="shortdesc">Example of using the Select interaction. Select features by clicking polygons. Hold the Shift-key to add to the selection.</p>
+          <p id="shortdesc">Example of using the Select interaction. Select features by clicking polygons. Hold the Shift-key to toggle the feature in the selection.</p>
           <div id="docs">
             <p>See the <a href="select-features.js" target="_blank">select-features.js source</a> to see how this is done.</p>
           </div>
