--- a/en/master/apidoc/ol.control.ZoomSlider.html
+++ b/en/master/apidoc/ol.control.ZoomSlider.html
@@ -1529,7 +1529,7 @@ that it is bound to.</p>
     <h4 class="name" id="setMap"><span class="type-signature"></span>setMap</h4>
     
     
-<div class="stability stability-experimental">Stability: experimental</div>
+<div class="stability stability-stable">Stability: stable</div>
 
 
 
