--- a/en/master/examples/zoomslider.html
+++ b/en/master/examples/zoomslider.html
@@ -13,19 +13,19 @@
  * The zoomslider in the second map shall be placed between the zoom-in and
  * zoom-out buttons.
  */
-#map2 .ol-zoom a.ol-zoom-out {
+#map2 .ol-zoom .ol-zoom-out {
   margin-top: 202px;
 }
 #map2 .ol-zoomslider {
   background-color: transparent;
-  top: 34px;
-  left: 9px;
-  width: 24px;
+  top: 2.3em;
 }
-#map2 .ol-zoomslider-thumb {
-  border-radius: 2px;
-  width: 24px;
-  height: 12px;
+
+#map2 .ol-touch .ol-zoom .ol-zoom-out { 
+  margin-top: 212px;
+}
+#map2 .ol-touch .ol-zoomslider {
+  top: 2.75em;
 }
 
 /**
