--- a/en/master/apidoc/ol.DeviceOrientation.html
+++ b/en/master/apidoc/ol.DeviceOrientation.html
@@ -63,7 +63,7 @@
     
     <div class="description">
         <p>The ol.DeviceOrientation class provides access to DeviceOrientation
-information and events, see the <a href="http://dev.w3.org/geo/api/spec-source-orientation">HTML 5 DeviceOrientation Specification</a> for more details.</p>
+information and events, see the <a href="http://www.w3.org/TR/orientation-event/">HTML 5 DeviceOrientation Specification</a> for more details.</p>
 <p>Many new computers, and especially mobile phones
 and tablets, provide hardware support for device orientation. Web
 developers targetting mobile devices will be especially interested in this
@@ -195,7 +195,7 @@ with all other uses of angles throughout OpenLayers.</p>
 	<dt class="tag-see">See:</dt>
 	<dd class="tag-see">
         <ul>
-            <li><a href="http://dev.w3.org/geo/api/spec-source-orientation">http://dev.w3.org/geo/api/spec-source-orientation</a></li>
+            <li><a href="http://www.w3.org/TR/orientation-event/">http://www.w3.org/TR/orientation-event/</a></li>
         </ul>
 	</dd>
 	
