--- a/en/master/apidoc/ol.Geolocation.html
+++ b/en/master/apidoc/ol.Geolocation.html
@@ -63,7 +63,7 @@
     
     <div class="description">
         <p>Helper class for providing HTML5 Geolocation capabilities.
-The <a href="http://dev.w3.org/geo/api/spec-source.html">Geolocation API</a>
+The <a href="http://www.w3.org/TR/geolocation-API/">Geolocation API</a>
 is used to locate a user's position.</p>
 <p>Example:</p>
 <pre><code>var geolocation = new ol.Geolocation();
@@ -393,7 +393,7 @@ geolocation.on('change', function(evt) {
       <td class="event"><code>change:trackingoptions</code></td>
       <td class="description last">PositionOptions
       as defined by the HTML5 Geolocation spec at
-      http://dev.w3.org/geo/api/spec-source.html</td>
+      http://www.w3.org/TR/geolocation-API/#position_options_interface</td>
     </tr>
     
   </tbody>
