--- a/en/master/examples/draw-features.html
+++ b/en/master/examples/draw-features.html
@@ -32,7 +32,7 @@
 
         <div class="span12">
           <h4 id="title">Draw features example</h4>
-          <p id="shortdesc">Example of using the <code>ol.interaction.Draw</code> interaction.</p>
+          <p id="shortdesc">Example of using the ol.interaction.Draw interaction.</p>
           <form class="form-inline">
             <label>Geometry type &nbsp;</label>
               <select id="type">
