--- a/en/master/examples/static-image.html
+++ b/en/master/examples/static-image.html
@@ -32,8 +32,9 @@
 
         <div class="span12">
           <h4 id="title">Static image example</h4>
-          <p id="shortdesc">Example of a static image layer. Source: <a href="http://xkcd.com/256/">xkcd.com/256/</a></p>
+          <p id="shortdesc">Example of a static image layer.</p>
           <div id="docs">
+            <p>Source: <a href="http://xkcd.com/256/">xkcd.com/256/</a></p>
             <p>See the <a href="static-image.js" target="_blank">static-image.js source</a> to see how this is done.</p>
           </div>
           <div id="tags">static image, xkcd</div>
