--- a/en/master/examples/tile-vector.html
+++ b/en/master/examples/tile-vector.html
@@ -32,7 +32,7 @@
 
         <div class="span12">
           <h4 id="title">Tile vector example</h4>
-          <p id="shortdesc">Example of <a href="http://openstreetmap.us/~migurski/vector-datasource/">vector tiles from openstreetmap.us</a>.</p>
+          <p id="shortdesc">Example of vector tiles from openstreetmap.us.</p>
           <div id="docs">
             <p>See the <a href="tile-vector.js" target="_blank">tile-vector.js source</a> to see how this is done.</p>
           </div>
