--- a/en/master/examples/drag-and-drop-image-vector.html
+++ b/en/master/examples/drag-and-drop-image-vector.html
@@ -32,7 +32,7 @@
 
         <div class="span4">
           <h4 id="title">Drag-and-Drop image vector example</h4>
-          <p id="shortdesc">Example of using the drag-and-drop interaction with a <code>ol.source.ImageVector</code>. Drag and drop GPX, GeoJSON, IGC, KML, or TopoJSON files on to the map. Each file is rendered to an image on the client.</p>
+          <p id="shortdesc">Example of using the drag-and-drop interaction with a ol.source.ImageVector. Drag and drop GPX, GeoJSON, IGC, KML, or TopoJSON files on to the map. Each file is rendered to an image on the client.</p>
           <div id="docs">
             <p>See the <a href="drag-and-drop-image-vector.js" target="_blank">drag-and-drop-image-vector.js source</a> to see how this is done.</p>
           </div>
