--- a/en/master/examples/igc.html
+++ b/en/master/examples/igc.html
@@ -32,8 +32,9 @@
 
         <div class="span4">
           <h4 id="title">IGC example</h4>
-          <p id="shortdesc">Example of tracks recorded from multiple paraglider flights on the same day, read from an IGC file. The five tracks contain a total of 49,707 unique coordinates. Zoom in to see more detail. The background layer is from <a href="http://www.opencyclemap.org/">OpenCycleMap</a>.</p>
+          <p id="shortdesc">Example of tracks recorded from multiple paraglider flights on the same day, read from an IGC file.</p>
           <div id="docs">
+            <p>The five tracks contain a total of 49,707 unique coordinates. Zoom in to see more detail. The background layer is from <a href="http://www.opencyclemap.org/">OpenCycleMap</a>.</p>
             <p>See the <a href="igc.js" target="_blank">igc.js source</a> to see how this is done.</p>
           </div>
           <input id="time" type="range" value="0" steps="1"></input>
